--- a/beat-runner.html
+++ b/beat-runner.html
@@ -63,6 +63,20 @@
     <!-- Project Content -->
     <section class="project-content">
         <div class="container">
+            <!-- Screens -->
+            <div class="content-section">
+                <h2 class="content-title">Screens</h2>
+                <div class="screens-gallery-enhanced">
+                    <video autoplay muted loop playsinline aria-label="Beat Runner gameplay demo">
+                        <source src="images/beats runner/gif-trim.MP4" type="video/mp4">
+                    </video>
+                    <img src="images/beats runner/main screen.png" alt="Beat Runner Main Screen">
+                    <img src="images/beats runner/in game photo.png" alt="Gameplay Action">
+                    <img src="images/beats runner/stage mode manu.png" alt="Stage Select Menu">
+                    <img src="images/beats runner/store screen.png" alt="Store Screen">
+                </div>
+            </div>
+
             <!-- At a Glance -->
             <div class="content-section">
                 <h2 class="content-title">At a Glance</h2>
@@ -172,20 +186,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Screens -->
-    <div class="content-section">
-        <h2 class="content-title">Screens</h2>
-        <div class="screens-gallery">
-            <video autoplay muted loop playsinline aria-label="Beat Runner gameplay demo" class="screens-video tall-media">
-                <source src="images/beats runner/gif-trim.MP4" type="video/mp4">
-            </video>
-            <img src="images/beats runner/main screen.png" alt="Beat Runner Main Screen">
-            <img src="images/beats runner/in game photo.png" alt="Gameplay Action">
-            <img src="images/beats runner/stage mode manu.png" alt="Stage Select Menu">
-            <img src="images/beats runner/store screen.png" alt="Store Screen">
-        </div>
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
