--- a/house-party-vr.html
+++ b/house-party-vr.html
@@ -94,35 +94,19 @@
             </div>
 
             <!-- Video Demonstration -->
-            <div class="content-section" style="text-align: center;">
+            <div class="content-section">
                 <h2 class="content-title">Experience in Action</h2>
-                <p class="content-text" style="max-width: 700px; margin: 0 auto var(--spacing-lg);">
-                    Watch how players interact with the DJ character and control the party vibe through intuitive
-                    gesture-based interactions.
-                </p>
-                <div
-                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: var(--spacing-lg); margin-top: var(--spacing-xl);">
-                    <div>
-                        <video width="100%" height="auto" autoplay muted loop playsinline
-                            style="border-radius: var(--radius-lg); border: 1px solid var(--color-border);">
-                            <source src="images/house party vr/gif1.mp4" type="video/mp4">
-                        </video>
-                        <p class="content-text"
-                            style="margin-top: var(--spacing-sm); font-size: 0.875rem; color: var(--color-text-secondary);">
-                            Player controls DJ interactions and party energy through physical gestures
-                        </p>
-                    </div>
-                    <div>
-                        <video width="100%" height="auto" autoplay muted loop playsinline
-                            style="border-radius: var(--radius-lg); border: 1px solid var(--color-border);">
-                            <source src="images/house party vr/gif2.mp4" type="video/mp4">
-                        </video>
-                        <p class="content-text"
-                            style="margin-top: var(--spacing-sm); font-size: 0.875rem; color: var(--color-text-secondary);">
-                            Reactive lighting and visual effects synchronized to music BPM and drops
-                        </p>
-                    </div>
+                <div class="screens-gallery-enhanced">
+                    <video autoplay muted loop playsinline aria-label="House Party VR gesture interactions">
+                        <source src="images/house party vr/gif1.mp4" type="video/mp4">
+                    </video>
+                    <video autoplay muted loop playsinline aria-label="House Party VR lighting effects">
+                        <source src="images/house party vr/gif2.mp4" type="video/mp4">
+                    </video>
                 </div>
+                <p class="content-text" style="text-align: center; margin-top: var(--spacing-lg); font-size: 0.95rem; color: var(--color-text-secondary);">
+                    Player controls DJ interactions through gestures (left) and reactive lighting synchronized to music (right).
+                </p>
             </div>
 
             <!-- Core Design Choices -->
