--- a/lucky-tower.html
+++ b/lucky-tower.html
@@ -62,22 +62,16 @@
     <!-- Project Content -->
     <section class="project-content">
         <div class="container">
-            <!-- Impact Section -->
-            <div class="content-section highlight-section">
-                <h2 class="content-title">Project Impact</h2>
-                <div class="metrics-grid">
-                    <div class="metric-card">
-                        <div class="metric-value">+15%</div>
-                        <div class="metric-label">Lift in D7 Retention (Target)</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-value">+12%</div>
-                        <div class="metric-label">Session Length</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-value">High</div>
-                        <div class="metric-label">Coin Sink Utilization</div>
-                    </div>
+            <!-- Screens -->
+            <div class="content-section">
+                <h2 class="content-title">Screens</h2>
+                <div class="screens-gallery-enhanced">
+                    <video autoplay muted loop playsinline aria-label="Lucky Tower gameplay demo">
+                        <source src="images/lucky-tower/game gif.MP4" type="video/mp4">
+                    </video>
+                    <img src="images/lucky-tower/hero-gameplay.png" alt="Lucky Tower Gameplay Hero">
+                    <img src="images/lucky-tower/floor-decision.png" alt="Floor Decision Screen">
+                    <img src="images/lucky-tower/store.png" alt="Store Interface">
                 </div>
             </div>
 
@@ -212,16 +206,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Screens -->
-    <div class="content-section">
-        <h2 class="content-title">Screens</h2>
-        <div class="screens-gallery">
-            <img src="images/lucky-tower/hero-gameplay.png" alt="Lucky Tower Gameplay Hero">
-            <img src="images/lucky-tower/floor-decision.png" alt="Floor Decision Screen">
-            <img src="images/lucky-tower/store.png" alt="Store Interface">
-        </div>
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
