Update portfolio for game content designer focus

--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <p class="hero-subtitle">Technical Operations Manager | Systems and LiveOps (Mobile F2P)</p>
+                <p class="hero-subtitle">Game Content Designer | Live F2P Content, Economy and Balance (ex-Tech Ops)</p>
                 <h1 class="hero-title">
-                    I design and execute<br>
-                    <span class="accent">Mobile F2P Systems</span><br>
-                    and LiveOps
+                    I design and ship<br>
+                    <span class="accent">Live F2P Content</span><br>
+                    and Economy Balance
                 </h1>
                 <p class="hero-description">
-                    I run LiveOps and feature execution for a large-scale casual F2P game.<br>
-                    I handle configuration, event setup, offers, QA checks, KPI monitoring, and iteration loops with
-                    Product, Monetization, Game Ops, and R&amp;D.<br>
-                    I also build small prototypes and tools to validate ideas and reduce manual work.
+                    I design and implement new content using existing live game systems: rewards, offers, event
+                    structures, and progression pacing.<br>
+                    I balance content to fit the economy and meta using KPI monitoring, segmentation, and A/B
+                    tests.<br>
+                    I build lightweight prototypes and tools to validate balance faster and reduce iteration time for
+                    the team.
                 </p>
                 <div class="chips">
                     <span class="chip">Systems and Economy</span>
@@ -50,8 +52,8 @@
                     <a href="about.html" class="btn btn-secondary">About + CV</a>
                 </div>
                 <p class="hero-proof">
-                    Current: Technical Operations Manager, Dice Dreams (SuperPlay). Open to Game Designer (Systems,
-                    LiveOps) roles.
+                    Current: Technical Operations Manager, Dice Dreams (SuperPlay). Open to Game Content Designer and
+                    Systems Designer roles (Live F2P).
                 </p>
             </div>
         </div>
@@ -87,6 +89,35 @@
             <h2 class="section-title">Featured Projects</h2>
 
             <div class="projects-grid">
+                <!-- Lucky Tower -->
+                <div class="project-card">
+                    <div class="project-image tall-media">
+                        <video autoplay muted loop playsinline>
+                            <source src="images/lucky-tower/game gif.MP4" type="video/mp4">
+                        </video>
+                        <div class="project-badge">LiveOps Design</div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Lucky Tower</h3>
+                        <p class="project-description">
+                            Live F2P content proposal with new reward tiers, tuning levers, and risk-reward pacing.
+                            Balanced probability curves and costs to fit the economy and improve
+                            session depth and retention.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">LiveOps Strategy</span>
+                            <span class="tag">Retention KPI</span>
+                            <span class="tag">Economy Balancing</span>
+                            <span class="tag">Feature Spec</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="lucky-tower.html" class="link-primary">View Case Study →</a>
+                            <a href="https://aloniter.github.io/lucky_tower/" target="_blank"
+                                class="link-secondary">Play Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Beat Runner -->
                 <div class="project-card">
                     <div class="project-image tall-media">
@@ -98,8 +129,8 @@
                     <div class="project-content">
                         <h3 class="project-title">3D Rhythm Runner</h3>
                         <p class="project-description">
-                            Browser-based rhythm runner to test progression pacing. Designed the difficulty curve and
-                            soft currency economy to validate the "grind vs. reward" loop.
+                            Playable economy and progression prototype: designed difficulty brackets, reward pacing,
+                            and upgrade costs to test "challenge vs. payoff" and tune the power curve using playtests.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Economy Design</span>
@@ -124,8 +155,8 @@
                     <div class="project-content">
                         <h3 class="project-title">Merge Lab</h3>
                         <p class="project-description">
-                            Mobile merge game with integrated Level Editor. Reduced balance iteration cycles from days
-                            to seconds using real-time on-device definitions.
+                            Content iteration prototype with a level editor: tune drop rates, costs, and level
+                            parameters in real time. Built to shorten balance cycles and support fast iteration.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Mobile UI</span>
@@ -136,34 +167,6 @@
                         <div class="project-links">
                             <a href="merge-lab.html" class="link-primary">View Case Study →</a>
                             <a href="https://merge-lab.vercel.app/" target="_blank"
-                                class="link-secondary">Play Live Demo</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Lucky Tower -->
-                <div class="project-card">
-                    <div class="project-image tall-media">
-                        <video autoplay muted loop playsinline>
-                            <source src="images/lucky-tower/game gif.MP4" type="video/mp4">
-                        </video>
-                        <div class="project-badge">LiveOps Design</div>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">Lucky Tower</h3>
-                        <p class="project-description">
-                            Risk-reward LiveOps event designed to lift D7 retention. Modeled probability curves and
-                            reward pacing to maximize session depth.
-                        </p>
-                        <div class="project-tags">
-                            <span class="tag">LiveOps Strategy</span>
-                            <span class="tag">Retention KPI</span>
-                            <span class="tag">Economy Balancing</span>
-                            <span class="tag">Feature Spec</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="lucky-tower.html" class="link-primary">View Case Study →</a>
-                            <a href="https://aloniter.github.io/lucky_tower/" target="_blank"
                                 class="link-secondary">Play Live Demo</a>
                         </div>
                     </div>
@@ -279,8 +282,8 @@
         <div class="container">
             <h2 class="section-title">Let's Work Together</h2>
             <p class="contact-subtitle">
-                I'm looking for a Game Designer or Product role in mobile F2P, focused on systems, LiveOps, and feature
-                development with a fast iteration cycle.
+                I'm looking for a Game Content Designer role in mobile F2P, focused on designing and balancing new
+                content inside existing systems, with fast iteration and KPI-driven tuning.
             </p>
             <div class="contact-links">
                 <a href="mailto:aloniter99@gmail.com" class="contact-link">
